--- a/extension/popup/settings.html
+++ b/extension/popup/settings.html
@@ -1,6 +1,14 @@
+<!DOCTYPE html>
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="action.css" />
+</head>
+<body>
 <h1> Writting Process </h1>
 
 <ul>
   <li> See my stats </li>
   <li> Manage my data </li>
 </ul>
+</body>
+</html>
