First prototype options page

--- a/extension/pages/settings.html
+++ b/extension/pages/settings.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="action.css" />
 </head>
 <body>
-<h1> Writting Process </h1>
+<h1> Writing Process </h1>
 
 <ul>
   <li> See my stats </li>
