--- a/ux/summary_stats.html
+++ b/ux/summary_stats.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-  <h1> Deanne </h1>
-  <div id="debug_testing_deanne"> </div>
+  <h1> Summary Stats </h1>
+  <div id="debug_testing_summary"> </div>
 </body>
 <script type="module">
-  import { deanne_graph } from './deanne3.js'
+  import { summary_stats } from './summary_stats.js'
 </script>
 </html>
