--- a/ux/ux.html
+++ b/ux/ux.html
@@ -25,18 +25,27 @@
       <div class="tile is-parent">
 	<article class="tile is-child box">
 	  <nav class="level">
-	    <div class="level-left"><a href="https://voice.google.com/u/0/calls?a=nc,%2B{{phone}}"><span class="icon"> <i class="fas fa-phone-square"></i> </span></a> </div>
+	    <div class="level-left"><a target="_blank" rel="noopener noreferrer" href="https://voice.google.com/u/0/calls?a=nc,{{phone}}"><span class="icon"> <i class="fas fa-phone-square"></i> </span></a> </div>
 	    <div class="level-item"><p class="title">{{name}}</p></div>
-	    <div class="level-right"><span class="icon"> <i class="fas fa-expand"></i> </span></div>
+	    <div class="level-right"><a target="_blank" rel="noopener noreferrer" href="{{google_doc}}"><span class="icon"> <i class="fas fa-expand"></i> </span></a></div>
 	  </nav>
 	  <div class="typing wa-tilebody">
 	    <p><span class="typing-text"></span>❙</p>
 	  </div>
 	  <div class="deanne is-hidden wa-tilebody">
 	  </div>
+	  <div class="summary is-hidden wa-tilebody">
+	    To do: This will show summary statistics, such as time-on-task, length, and how long since last activity
+	  </div>
+	  <div class="outline is-hidden wa-tilebody">
+	    To do: This will show an outline and how much is in each sectino
+	  </div>
+	  <div class="timeline is-hidden wa-tilebody">
+	    To do: This will show a timeline of when students started, worked, and had major revisions
+	  </div>
 	  <div class="contact is-hidden wa-tilebody">
 	    <p> <a href="mailto:{{email}}"> <span class="icon"> <i class="fas fa-envelope"></i> </span> {{email}}</a> <img src="media/hubspot/{{avatar}}" height="40%" width="40%" align="right"/><br> 
-	      <a href="https://voice.google.com/u/0/calls?a=nc,%2B{{phone}}"><span class="icon"> <i class="fas fa-phone-square"></i> </span> {{phone}}</a> </p>
+	      <a target="_blank" rel="noopener noreferrer" href="https://voice.google.com/u/0/calls?a=nc,{{phone}}"><span class="icon"> <i class="fas fa-phone-square"></i> </span> {{phone}}</a> </p>
 	      {{address}} <br>
 	    <span class="icon">
 	      <i class="fas fa-facebook-square"></i>
@@ -44,21 +53,6 @@
 	  </div>
 	</article>
       </div>
-    </script>
-
-    <script id="template-typing-tile" type="x-tmpl">
-    </script>
-
-    <script id="template-outline-tile" type="x-tmpl">
-    </script>
-
-    <script id="template-deanne-tile" type="x-tmpl">
-    </script>
-
-    <script id="template-revisions-tile" type="x-tmpl">
-    </script>
-
-    <script id="template-revisions-contact" type="x-tmpl">
     </script>
 
     <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -106,7 +100,7 @@
 	    <li class="tilenav tilenav-deanne"><a><span class="icon"><i class="fas fa-chart-line"></i></span>Deanne Graphs</a></li>
 	    <li class="tilenav tilenav-summary"><a><span class="icon"><i class="fas fa-chart-bar"></i></span>Summary Stats</a></li>
 	    <li class="tilenav tilenav-outline"><a><span class="icon"><i class="fas fa-list"></i></span>Outlines</a></li>
-	    <li class="tilenav tilenav-revision"><a><span class="icon"><i class="fas fa-history"></i></span>Revisions</a></li>
+	    <li class="tilenav tilenav-timeline"><a><span class="icon"><i class="fas fa-history"></i></span>Timeline</a></li>
 	    <li class="tilenav tilenav-contact"><a><span class="icon"><i class="fas fa-address-card"></i></span>Contact</a></li>
 	  </ul>
 	</div>
