--- a/ux/deane.html
+++ b/ux/deane.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-  <h1> Deanne </h1>
-  <div id="debug_testing_deanne"> </div>
+  <h1> Deane </h1>
+  <div id="debug_testing_deane"> </div>
 </body>
 <script type="module">
-  import { deanne_graph } from './deanne3.js'
+  import { deane_graph } from './deane.js'
 </script>
 </html>
