--- a/ux/ux.html
+++ b/ux/ux.html
@@ -32,7 +32,7 @@
 	  <div class="typing wa-tilebody">
 	    <p><span class="typing-text"></span>❙</p>
 	  </div>
-	  <div class="deanne is-hidden wa-tilebody">
+	  <div class="deane is-hidden wa-tilebody">
 	  </div>
 	  <div class="summary is-hidden wa-tilebody">
 	  </div>
@@ -96,7 +96,7 @@
 	<div class="tabs">
 	  <ul>
 	    <li class="is-active tilenav tilenav-typing"><a><span class="icon"><i class="fas fa-edit"></i></span>Current Typing</a></li>
-	    <li class="tilenav tilenav-deanne"><a><span class="icon"><i class="fas fa-chart-line"></i></span>Deanne Graphs</a></li>
+	    <li class="tilenav tilenav-deane"><a><span class="icon"><i class="fas fa-chart-line"></i></span>Deane Graphs</a></li>
 	    <li class="tilenav tilenav-summary"><a><span class="icon"><i class="fas fa-chart-bar"></i></span>Summary Stats</a></li>
 	    <li class="tilenav tilenav-outline"><a><span class="icon"><i class="fas fa-list"></i></span>Outlines</a></li>
 	    <li class="tilenav tilenav-timeline"><a><span class="icon"><i class="fas fa-history"></i></span>Timeline</a></li>
@@ -149,7 +149,7 @@
 	    <article class="tile is-child box">
 	      <p class="title">Three</p>
 	      <p class="subtitle">Subtitle</p>
-	      <div id="deanne">
+	      <div id="deane">
 	      </div>
 	    </article>
 	  </div>
