--- a/extension/pages/settings.html
+++ b/extension/pages/settings.html
@@ -6,9 +6,11 @@
 <body>
 <h1> Writing Process </h1>
 
-<ul>
-  <li> See my stats </li>
-  <li> Manage my data </li>
-</ul>
+<p> Hi! This is an extension which captures writing process data in
+  Google Docs. It's part of a research project designed to help your
+  classrooms work better during COVID19. If you have any feedback or
+  questions, please don't hesitate to reach out to the researchers or
+  to talk to your teachers.</p>
+
 </body>
 </html>
