Mid-refactor: Adding headers/metadata

--- a/extension/pages/options.html
+++ b/extension/pages/options.html
@@ -31,6 +31,11 @@
       <input type="text" class="teacher-tag input-text" >
       <button type="button" class="teacher-tag save-button">Save</button>
       <button type="button" class="teacher-tag remove-button">Remove</button>
+      <br>
+      <label>Unique ID</label>
+      <input type="text" class="unique-id input-text" >
+      <button type="button" class="unique-id save-button">Save</button>
+      <button type="button" class="unique-id remove-button">Remove</button>
     </form>
     <script src="options.js"></script>
   </body>
