Support for Google Classroom, class rosters, front-end rendering, etc. Also, adding scripts to generate test data. Also, cleaning up initialization scripts

--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -6,7 +6,7 @@
 
     <!-- Our stylesheet / CSS framework is Bulma, for now--> 
     <link rel="stylesheet" href="https://bulma.io/css/bulma-docs.min.css?v=202002231419"/>
-    <link rel="stylesheet" href="ux.css"/>
+    <!--link rel="stylesheet" href="ux.css"/-->
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 
     <!-- Templates -->
