Moving to main webapp on /, as well as adding docs

--- a/webapp/static/modules/course.html
+++ b/webapp/static/modules/course.html
@@ -6,7 +6,7 @@
   </div>
   <div class="card-content">
     <div class="content ">
-      <p><button class="button">  <a href="#wd_course={{id}}">
+      <p><button class="button">  <a href="#tool=WritingObserver;course_id={{id}}">
 	    <span class="icon"> <i class="fas fa-pen-nib"></i> </span> &nbsp;
 	    Writing dashboard</a> </button></p>
       <p>
