--- a/webapp/static/webapp.html
+++ b/webapp/static/webapp.html
@@ -5,7 +5,7 @@
 
     <!-- Our stylesheet / CSS framework is Bulma, for now--> 
     <link rel="stylesheet" href="https://bulma.io/css/bulma-docs.min.css?v=202002231419"/>
-    <link rel="stylesheet" href="ux.css"/>
+    <link rel="stylesheet" href="/static/ux.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title> Writing Analysis </title>
@@ -17,7 +17,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
 	<a class="navbar-item" href="https://ets.org">
-	  <img src="media/ETS_Logo.svg" width="30" height="22">
+	  <img src="/static/media/ETS_Logo.svg" width="30" height="22">
 	</a>
 	
 	<a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
