--- a/webapp/static/modules/login.html
+++ b/webapp/static/modules/login.html
@@ -1,3 +1,3 @@
-<a href="/app/auth/login/google">
+<a href="/auth/login/google">
    <button class="button is-primary">Log in with Google!</button>
 </a>
