Dashboard based on Google roster data

--- a/webapp/static/webapp.html
+++ b/webapp/static/webapp.html
@@ -16,7 +16,7 @@
     <!-- Top navigation bar -->
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-	<a class="navbar-item" href="https://ets.org">
+	<a class="navbar-item" href="/">
 	  <img src="/static/media/ETS_Logo.svg" width="30" height="22">
 	</a>
 	
