Dashboard app works-ish with Google Docs

--- a/webapp/static/modules/tile.html
+++ b/webapp/static/modules/tile.html
@@ -12,7 +12,7 @@
 	</div>
       </div>
       <div class="card-content" style="padding-top:7px">
-	<div class="wo-tile-summary level" style="margin:0; border-bottom:1px;">
+	<div class="wo-tile-character-count level" style="margin:0; border-bottom:1px;">
 	  <div class="wo-character-count level-item">
 	    <svg preserveAspectRatio="none" viewBox="0 0 100 15" class="svg-content" style="border: 1px solid lightgray; width:20%; height:10px;position:absolute; z-index:0;">
 	      <rect x="0" y="0" width="50" height="15" fill="#ccccff" class="wo-character-count-bar"></rect>
