--- a/webapp/static/modules/tile.html
+++ b/webapp/static/modules/tile.html
@@ -3,7 +3,7 @@
   <article class="tile is-child card" style="display:flex; flex-direction:column; justify-content:space-between">
       <div class="card-header">
 	<div class="card-header-title level">
-	    <div class="level-left wo-tile-name">Jimbob Rowlings</div>
+	    <div class="level-left wo-tile-name">[Loading]</div>
 	    <div class="level-right">
 	      <figure class="image is-32x32">
 		<img class="wo-tile-photo" src="/static/media/32x32.png">
@@ -17,23 +17,23 @@
 	    <svg preserveAspectRatio="none" viewBox="0 0 100 15" class="svg-content" style="border: 1px solid lightgray; width:20%; height:10px;position:absolute; z-index:0;">
 	      <rect x="0" y="0" width="50" height="15" fill="#ccccff" class="wo-character-count-bar"></rect>
 	    </svg>
-	    <span style="z-index:1">1321</span>
+	    <span style="z-index:1">N/A</span>
 	  </div>
 	  <div class="wo-tile-total-time level-item">
 	    <svg preserveAspectRatio="none" viewBox="0 0 60 10" class="svg-content" style="border: 1px solid lightgray; width:20%; height:10px;position:absolute; z-index:0;">
 	      <rect x="0" y="0" width="30" height="10" fill="#ccccff"></rect>
 	    </svg>
-	    <span style="z-index:1">2:34</span>
+	    <span style="z-index:1">N/A</span>
 	  </div>
 	  <div class="wo-tile-time-on-task level-item">
 	    <svg preserveAspectRatio="none" viewBox="0 0 60 10" class="svg-content" style="border: 1px solid lightgray; width:20%; height:10px;position:absolute; z-index:0;">
 	      <rect x="0" y="0" width="30" height="10" fill="#ccccff" class="wo-time-on-task-bar"></rect>
 	    </svg>
-	    <span style="z-index:1">0:17</span>
+	    <span style="z-index:1">N/A</span>
 	  </div>
 	</div>
 	<div class="wo-tile-typing">
-	  <p><span class="wo-typing-text"></span>This is text that I'm typing, and my cursor position.❙</p>
+	  <p><span class="wo-typing-text"></span>[Loading]</p>
 	</div>
       </div>
       <div class="card-footer level" style="margin-top:auto">
