Aggregated per-class statistics hacked in, idle time works

--- a/webapp/static/modules/tile.html
+++ b/webapp/static/modules/tile.html
@@ -19,15 +19,15 @@
 	    </svg>
 	    <span style="z-index:1">N/A</span>
 	  </div>
-	  <div class="wo-tile-total-time level-item">
-	    <svg preserveAspectRatio="none" viewBox="0 0 60 10" class="svg-content" style="border: 1px solid lightgray; width:20%; height:10px;position:absolute; z-index:0;">
-	      <rect x="0" y="0" width="30" height="10" fill="#ccccff"></rect>
-	    </svg>
-	    <span style="z-index:1">N/A</span>
-	  </div>
 	  <div class="wo-tile-time-on-task level-item">
 	    <svg preserveAspectRatio="none" viewBox="0 0 60 10" class="svg-content" style="border: 1px solid lightgray; width:20%; height:10px;position:absolute; z-index:0;">
 	      <rect x="0" y="0" width="30" height="10" fill="#ccccff" class="wo-time-on-task-bar"></rect>
+	    </svg>
+	    <span style="z-index:1">N/A</span>
+	  </div>
+	  <div class="wo-tile-idle-time level-item">
+	    <svg preserveAspectRatio="none" viewBox="0 0 60 10" class="svg-content" style="border: 1px solid lightgray; width:20%; height:10px;position:absolute; z-index:0;">
+	      <rect x="0" y="0" width="30" height="10" fill="#ccccff"></rect>
 	    </svg>
 	    <span style="z-index:1">N/A</span>
 	  </div>
