Syncing between machines. Mostly cosmetic changes

--- a/webapp/static/modules/dashboard.html
+++ b/webapp/static/modules/dashboard.html
@@ -6,7 +6,7 @@
 	    <li class="is-active tilenav tilenav-typing">
 	      <a><span class="icon"><i class="fas fa-edit"></i></span>Current Typing</a>
 	    </li>
-	    <li class="tilenav tilenav-deane">
+	    <!--li class="tilenav tilenav-deane">
 	      <a><span class="icon"><i class="fas fa-chart-line"></i></span>Deane Graphs</a>
 	    </li>
 	    <li class="tilenav tilenav-summary">
@@ -20,7 +20,7 @@
 	    </li>
 	    <li class="tilenav tilenav-contact">
 	      <a><span class="icon"><i class="fas fa-address-card"></i></span>Contact</a>
-	    </li>
+	    </li-->
 	  </ul>
 	</div>
 	<!-- Student tiles. This is populated programatically -->
