Adding logo to page

--- a/webapp/static/modules/login.html
+++ b/webapp/static/modules/login.html
@@ -1,3 +1,19 @@
-<a href="/auth/login/google">
-   <button class="button is-primary">Log in with Google!</button>
-</a>
+<div class="columns">
+  <div class="column">
+    <figure class="image is-2by9">
+      <img src="/static/media/logo.jpg" width="30" height="22" alt="Writing Observer Logo">
+    </figure>
+  </div>
+  <div class="column">
+    <div class="content">
+      <a href="/auth/login/google">
+	<button class="button is-primary">Log in with Google!</button>
+      </a>
+      <p> <span class="icon">
+	<i class="fab fa-github" aria-hidden="true"></i>
+      </span>
+      Contribute
+      on <a href="https://github.com/ETS-Next-Gen/writing_observer">github</a> </p>
+    </div>
+  </div>
+</div>
