Unauthorized page, tooltips, styling fixes, etc

--- a/webapp/static/webapp.html
+++ b/webapp/static/webapp.html
@@ -4,7 +4,8 @@
     <script data-main="/static/webapp.js" src="/static/3rd_party/require.js"></script>
 
     <!-- Our stylesheet / CSS framework is Bulma, for now--> 
-    <link rel="stylesheet" href="https://bulma.io/css/bulma-docs.min.css?v=202002231419"/>
+    <link rel="stylesheet" href="/static/3rd_party/bulma.min.css"/>
+    <link rel="stylesheet" href="/static/3rd_party/bulma-tooltip-min.css"/>
     <link rel="stylesheet" href="/static/ux.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
