--- a/learning_observer/learning_observer/static/websocketdebug.html
+++ b/learning_observer/learning_observer/static/websocketdebug.html
@@ -12,8 +12,8 @@
     <div style="width:800px; height:100px; border:solid;"></div>
   </body>
   <script>
-    let socket_in = new WebSocket("wss://writing.hopto.org/wsapi/in/");
-    let socket_out = new WebSocket("wss://writing.hopto.org/wsapi/out/");
+    let socket_in = new WebSocket("wss://"+window.location.hostname+"/wsapi/in/");
+    let socket_out = new WebSocket("wss://"+window.location.hostname+"/wsapi/out/");
     socket_in.onopen = function() {
         socket_in.send(JSON.stringify({
             "event": "metadata_finished",
