--- a/learning_observer/learning_observer/static/modules/tile.html
+++ b/learning_observer/learning_observer/static/modules/tile.html
@@ -42,11 +42,11 @@
 	      <span class="icon"> <i class="fas fa-envelope"></i> </span>
 	    </a>
 	  </div>
-	  <div class="level-item">
+	  <!--div class="level-item">
 	    <a target="_blank" rel="noopener noreferrer" class="wo-tile-phone" href="https://voice.google.com/u/0/">
 	      <span class="icon"> <i class="fas fa-phone-square"></i> </span>
 	    </a>
-	  </div>
+	  </div-->
 	  <div class="level-item">
 	    <a target="_blank" rel="noopener noreferrer" href="https://docs.google.com" class="wo-tile-doc" data-tooltip="View document in Google Docs">
 	      <span class="icon"> <i class="fas fa-expand"></i></span>
