--- a/learning_observer/learning_observer/static/ux.html
+++ b/learning_observer/learning_observer/static/ux.html
@@ -31,11 +31,11 @@
       <div class="tile is-parent">
 	<article class="tile is-child box">
 	  <nav class="level">
-	    <div class="level-left">
+	    <!--div class="level-left">
 	      <a target="_blank" rel="noopener noreferrer" href="https://voice.google.com/u/0/calls?a=nc,{{phone}}">
 		<span class="icon"> <i class="fas fa-phone-square"></i> </span>
 	      </a>
-	    </div>
+	    </div-->
 	    <div class="level-item"><p class="title">{{name}}</p></div>
 	    <div class="level-right">
 	      <a target="_blank" rel="noopener noreferrer" href="{{google_doc}}">
