--- a/learning_observer/learning_observer/static/webapp.html
+++ b/learning_observer/learning_observer/static/webapp.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <script src="/static/3rd_party/d3.v5.min.js"></script> <!-- Temporary, for debugging. require pulls this in -->
     <script data-main="/static/webapp.js" src="/static/3rd_party/require.js"></script>
 
     <!-- Our stylesheet / CSS framework is Bulma, for now--> 
@@ -40,14 +41,14 @@
     <footer class="footer">
       <div class="content has-text-centered">
 	<p>
-	  <strong>Writing Dashboard</strong>
+	  <strong>Learning Observer</strong>
 	  by <a href="http://mitros.org/p">Piotr Mitros</a>. Copyright
 	  (c) 2020. Educational Testing
 	  Service. The <a href="https://github.com/ETS-Next-Gen/writing_analysis">source
 	  code</a> will be released as free / open source software,
 	  most likely
 	  under <a href="https://www.gnu.org/licenses/agpl-3.0.en.html">the
-	  AGPLv3 license</a>. Some thoughts on privacy.
+	  AGPLv3 license</a>.
 	</p>
       </div>
     </footer>
