Tool list dynamically loaded

--- a/learning_observer/learning_observer/static/modules/course.html
+++ b/learning_observer/learning_observer/static/modules/course.html
@@ -6,14 +6,7 @@
   </div>
   <div class="card-content">
     <div class="content ">
-      <p>
-	<button class="button">
-	  <a href="/static/repos/lo_core/writing_observer/static-dev/wobserver.html#tool=WritingObserver;course_id={{id}}">
-	    <span class="icon"> <i class="fas fa-pen-nib"></i> </span> &nbsp;
-	    Writing dashboard
-	  </a>
-	</button>
-      </p>
+        {{{ tools }}}
       <p>
 	{{ descriptionHeading }}</p>
     </div>
