Starting to tease out Writing Observer

--- a/learning_observer/learning_observer/static/modules/tool.html
+++ b/learning_observer/learning_observer/static/modules/tool.html
@@ -1,7 +1,7 @@
       <p>
 	<button class="button">
-	  <a href="{{url}}#course_id={{id}}">
-	    <span class="icon"> <i class="{{ icon }}"></i> </span> &nbsp;
+	  <a href="{{url}}#course_id={{id}};tool=WritingObserver"> <!-- tool= is legacy -->
+	    <span class="icon"> <i class="{{ icon_class }}"></i> </span> &nbsp;
 	    {{ name }}
 	  </a>
 	</button>
