Abstracting out Writing Observer

--- a/modules/writing_observer/writing_observer/static/wobserver.html
+++ b/modules/writing_observer/writing_observer/static/wobserver.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="/static/3rd_party/d3.v5.min.js"></script> <!-- Temporary, for debugging. require pulls this in -->
-    <script data-main="/static/wo_loader.js" src="/static/3rd_party/require.js"></script>
+    <script data-main="wo_loader.js" src="/static/3rd_party/require.js"></script>
 
     <!-- Our stylesheet / CSS framework is Bulma, for now--> 
     <link rel="stylesheet" href="/static/3rd_party/bulma.min.css"/>
