--- a/learning_observer/learning_observer/static/modules/login.html
+++ b/learning_observer/learning_observer/static/modules/login.html
@@ -45,6 +45,11 @@ We should have flags to enable different login methods
 	    <button class="button is-primary">Log in with Google!</button>
 	</a> </p>
       </div>
+      <div class="lo-http-auth">
+	<p><a href="/auth/login/http-basic">
+	    <button class="button is-primary">HTTP Basic Auth</button>
+	</a> </p>
+      </div>
       <p> <span class="icon">
 	  <i class="fab fa-github" aria-hidden="true"></i>
 	</span>
