Abstracted out a bunch of generic dashboard stuff. Starting to make front-end into an API.

--- a/modules/writing_observer/writing_observer/static/wobserver.html
+++ b/modules/writing_observer/writing_observer/static/wobserver.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <script src="/common/dashboard.js"></script>
     <script src="/static/liblo.js"></script>
     <script src="/static/3rd_party/d3.v5.min.js"></script> <!-- Temporary, for debugging. require pulls this in -->
     <script data-main="wo_loader.js" src="/static/3rd_party/require.js"></script>
