Improved auth infrastructure

--- a/learning_observer/learning_observer/static/webapp.html
+++ b/learning_observer/learning_observer/static/webapp.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="/static/3rd_party/d3.v5.min.js"></script> <!-- Temporary, for debugging. require pulls this in -->
+    <script src="/static/liblo.js"></script>
     <script data-main="/static/webapp.js" src="/static/3rd_party/require.js"></script>
 
     <!-- Our stylesheet / CSS framework is Bulma, for now--> 
@@ -43,7 +44,7 @@
 	<p>
 	  <strong>Learning Observer</strong>
 	  by <a href="http://mitros.org/p">Piotr Mitros</a>. Copyright
-	  (c) 2020, 2021. Educational Testing
+	  (c) 2020-2022. Educational Testing
 	  Service. The <a href="https://github.com/ETS-Next-Gen/writing_analysis">source
 	  code</a> is available 
 	  under <a href="https://www.gnu.org/licenses/agpl-3.0.en.html">the
