Changing dashes to underscores. Breaking change.

--- a/learning_observer/learning_observer/static/modules/login.html
+++ b/learning_observer/learning_observer/static/modules/login.html
@@ -6,8 +6,8 @@ We should have flags to enable different login methods
 <div class="columns">
   <div class="column">
     <div class="content">
-      <h1 class='lo-server-name'> {{ server-name }} </h1>
-      <p class='lo-front-page-pitch'> {{ front-page-pitch }}
+      <h1 class='lo-server-name'> {{ server_name }} </h1>
+      <p class='lo-front-page-pitch'> {{ front_page_pitch }}
       </p>
       <div class="lo-password-auth">
 	<form action="javascript:void(0);" method="post">
@@ -59,7 +59,7 @@ We should have flags to enable different login methods
   </div>
   <div class="column">
     <figure class="image is-2by9">
-      <img src="{{logo-big}}" alt="Learning Observer Logo">
+      <img src="{{logo_big}}" alt="Learning Observer Logo">
     </figure>
   </div>
 </div>
