Minimum working version for capturing all events

--- a/modules/lo_event/lo_event/prototype/index.html
+++ b/modules/lo_event/lo_event/prototype/index.html
@@ -10,10 +10,8 @@
 <p id="demo"></p>
 
 <div id="output"></div>
-<script src="events.js"></script>
-<script>
-/*document.addEventListener("copy", eventListener);*/
-</script>
+<script src="util.js"></script>
+<script type="module" src="events.js"></script>
 
 </body>
 </html>
