--- a/modules/lo_event/examples/test.html
+++ b/modules/lo_event/examples/test.html
@@ -10,9 +10,9 @@
 <p id="demo"></p>
 
 <div id="output"></div>
-<script src="lodash.min.js"></script>
+<script src="../lo_event/prototype/lodash.min.js"></script>
 <script type="module">
-  import { subscribeToEvents } from './browser_events.js';
+  import { subscribeToEvents } from '../lo_event/prototype/browser_events.js';
 
   function logToDiv(eventType, event) {
       // Select the output div
