--- a/modules/lo_event/examples/redux_loop.html
+++ b/modules/lo_event/examples/redux_loop.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>My Parcel App</title>
+    <title>Redux loop with actions</title>
   </head>
   <body>
     <div id="app"></div>
