--- a/learning_observer/learning_observer/static/webapp.html
+++ b/learning_observer/learning_observer/static/webapp.html
@@ -43,8 +43,8 @@
       <div class="content has-text-centered">
 	<p>
 	  <strong>Learning Observer</strong>
-	  by <a href="http://mitros.org/p">Piotr Mitros</a>. Copyright
-	  (c) 2020-2022. Educational Testing
+	  by <a href="http://mitros.org/p">Piotr Mitros</a> and Bradley Erickson. Copyright
+	  (c) 2020-2024. Educational Testing
 	  Service. The <a href="https://github.com/ETS-Next-Gen/writing_analysis">source
 	  code</a> is available 
 	  under <a href="https://www.gnu.org/licenses/agpl-3.0.en.html">the
