--- a/learning_observer/learning_observer/static/modules/login.html
+++ b/learning_observer/learning_observer/static/modules/login.html
@@ -50,6 +50,8 @@ We should have flags to enable different login methods
 	    <button class="button is-primary">HTTP Basic Auth</button>
 	</a> </p>
       </div>
+      <div class="lo-lti-auth">
+      </div>
       <p> <span class="icon">
 	  <i class="fab fa-github" aria-hidden="true"></i>
 	</span>
